# linkedin_genai

./: linkedin.ipynb  pyproject.toml
